[gd_scene load_steps=3 format=3 uid="uid://dpxmmifbiyp45"]

[ext_resource type="Script" uid="uid://c38557dqlkv5m" path="res://entities/items/item_entity.gd" id="1_r7n1h"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_46sow"]
size = Vector2(80, 80)

[node name="ItemEntity" type="Node2D"]
z_index = -1
script = ExtResource("1_r7n1h")
metadata/_custom_type_script = "uid://c38557dqlkv5m"

[node name="ItemSprite" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_46sow")

[connection signal="body_entered" from="Area2D" to="." method="_on_player_entered"]
